--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.8.0",
+    "js-yaml": "^4.1.0",
     "nprogress": "^0.2.0",
     "nx": "15.3.0",
     "nx-vue3-vite": "^0.20.0",
