--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,38 +1,20 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "module": "ESNext",
-    "target": "ESNext",
-    "lib": ["DOM", "ESNext"],
-    "strict": true,
-    "esModuleInterop": true,
-    "jsx": "preserve",
-    "skipLibCheck": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "noUnusedLocals": true,
-    "strictNullChecks": true,
-    "allowJs": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": [
-      "vitest",
-      "vite/client",
-      "vue/ref-macros",
-      "vite-plugin-pages/client",
-      "vite-plugin-vue-component-preview/client",
-      "vite-plugin-vue-layouts/client",
-      "vite-plugin-pwa/client",
-      "unplugin-vue-macros/macros-global"
-    ],
-    "paths": {
-      "~/*": ["src/*"]
-    }
-  },
+
+  "extends": "../../tsconfig.json",
   "vueCompilerOptions": {
     "plugins": [
       "@vue-macros/volar/define-model",
       "@vue-macros/volar/define-slots"
     ]
+  },
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"],
+      "~types/*": [
+        "../types/*"
+      ]
+    }
   },
   "exclude": ["dist", "node_modules", "cypress"]
 }
